# pywebscraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pywebscraper/: scraper.py  utils.py
src/pywebscraper/: __init__.py  image.py  scraper.py  utils.py
tests/: test_utils_functions.py
