[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywebscraper"
version = "0.1.3"
description = "A simple web scraper that uses the BeautifulSoup library to scrape the web."
readme = "README.md"
authors = [{ name = "Fadhil Yori", email = "me@fadhilyori.my.id" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "webscraper",
    "webscraping",
    "webscraping-beautifulsoup",
    "beautifulsoup",
]
dependencies = ["beautifulsoup4>=4.13.0", "requests", "markdownify"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "twine"]

[project.urls]
Homepage = "https://github.com/fadhilyori/pywebscraper"

[tool.bumpver]
current_version = "0.1.3"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
# "README.md" = [
#     "{version}",
#     "{pep440_version}",
# ]
"src/pywebscraper/__init__.py" = ["{version}"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = "src"
include = ["pywebscraper"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
